<resources>
    <string name="app_name">Pantau COVID</string>
    <string name="empty">----</string>
    <string name="card_positif">Positif</string>
    <string name="card_sembuh">Sembuh</string>
    <string name="card_meninggal">Meninggal</string>
    <string name="update_tittle">Update Terbaru</string>
    <string name="update_time">Data terbaru kasus COVID-19</string>
    <string name="view_detail">Lihat Detail</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="daftar_kasus_tiap_negara">Daftar Kasus Setiap Negara</string>
    <string name="daftar_kasus_tiap_provinsi">Daftar Kasus Setiap Provinsi</string>
    <string name="live_data_tiap_negara">Live Data Setiap Negara</string>
    <string name="tv_negara">Negara</string>
    <string name="live_data_tiap_provinsi">Live Data Tiap Provinsi</string>
    <string name="liva_data_jawa_timur">Liva Data Jawa Timur</string>
    <string name="daftar_kasus_jawa_timur">Daftar Kasus Jawa Timur</string>
    <string name="pantau">Pantau</string>
    <string name="covid_19">COVID-19</string>
    <string name="icon_sembuh">Icon Sembuh</string>
    <string name="icon_positif">Icon Positif</string>
    <string name="icon_meninggal">Icon Meninggal</string>
    <string name="chevron_right">Chevron Right</string>
    <string name="daftar_kasus_kab_jember">Daftar Kasus Kab. Jember</string>
    <string name="odr">ODR</string>
    <string name="otg">OTG</string>
    <string name="odp">ODP</string>
    <string name="pdp">PDP</string>
    <string name="positif">POSITIF</string>
    <string name="live_data_kabupaten_jember">Live Data Kabupaten Jember</string>

    <string-array name="spinner_country">
        <item>Indonesia</item>
        <item>Global</item>
    </string-array>
</resources>
