<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/kasus_header"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/header"
        android:maxHeight="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pantau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black"
        android:text="@string/pantau"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/kasus_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/covid19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black"
        android:text="@string/covid_19"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/kasus_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/kasus_header"
        app:layout_constraintTop_toBottomOf="@+id/pantau"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/kasus_bg"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/kasus_bg_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kasus_header"
        app:layout_constraintVertical_bias="1.0">

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/country_select_bg"
            android:clickable="true"
            android:entries="@array/spinner_country"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

        <TextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country_spinner"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/semibold"
            android:text="@string/update_tittle"
            android:textColor="@color/darkGrey"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/waktuUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_text"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/regular"
            android:text="@string/update_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/detail_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:fontFamily="@font/regular"
            android:text="@string/view_detail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardKasus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/waktuUpdate"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <!--            container-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <!--                col 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/icon_positif"
                        android:src="@drawable/ic_virus" />

                    <TextView
                        android:id="@+id/tv_positif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/semibold"
                        android:gravity="center"
                        android:text="@string/empty"
                        android:textColor="@color/orange"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/regular"
                        android:text="@string/card_positif"
                        android:textColor="@color/orange"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--                col 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/icon_sembuh"
                        android:src="@drawable/ic_heart" />

                    <TextView
                        android:id="@+id/tv_sembuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/semibold"
                        android:gravity="center"
                        android:text="@string/empty"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/regular"
                        android:text="@string/card_sembuh"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--                col 3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/icon_meninggal"
                        android:src="@drawable/ic_cross" />

                    <TextView
                        android:id="@+id/tv_meninggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/semibold"
                        android:gravity="center"
                        android:text="@string/empty"
                        android:textColor="@color/danger"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/regular"
                        android:text="@string/card_meninggal"
                        android:textColor="@color/danger"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_list_negara"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/cardKasus"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/ic_daftar_negara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/ic_daftar_negara"
                    android:contentDescription="@string/daftar_kasus_tiap_negara" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/ic_daftar_negara"
                    android:fontFamily="@font/regular"
                    android:text="@string/daftar_kasus_tiap_negara" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:contentDescription="@string/chevron_right"
                    android:src="@drawable/ic_chevron_right_primary" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_list_provinsi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/card_list_negara"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/ic_daftar_provinsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/ic_daftar_provinsi"
                    android:contentDescription="@string/daftar_kasus_tiap_provinsi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/ic_daftar_provinsi"
                    android:fontFamily="@font/regular"
                    android:text="@string/daftar_kasus_tiap_provinsi" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:contentDescription="@string/chevron_right"
                    android:src="@drawable/ic_chevron_right_primary" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_list_jatim"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/card_list_provinsi"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/ic_daftar_jatim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/ic_daftar_provinsi"
                    android:contentDescription="@string/daftar_kasus_jawa_timur" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/ic_daftar_jatim"
                    android:fontFamily="@font/regular"
                    android:text="@string/daftar_kasus_jawa_timur" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="18dp"
                    android:contentDescription="@string/chevron_right"
                    android:src="@drawable/ic_chevron_right_primary" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>