<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="18dp"
    android:layout_marginBottom="6dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingTop="9dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_negara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:paddingLeft="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/tv_negara"
            android:textSize="20sp" />

    </LinearLayout>

    <!--            container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--                col 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_virus" />

            <TextView
                android:id="@+id/tv_positif_negara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/empty"
                android:textColor="@color/orange"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/regular"
                android:text="@string/card_positif"
                android:textColor="@color/orange"
                android:textSize="14dp" />

        </LinearLayout>

        <!--                col 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_heart" />

            <TextView
                android:id="@+id/tv_sembuh_negara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/empty"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/regular"
                android:text="@string/card_sembuh"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14dp" />

        </LinearLayout>

        <!--                col 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_cross" />

            <TextView
                android:id="@+id/tv_meninggal_negara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/empty"
                android:textColor="@color/danger"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/regular"
                android:text="@string/card_meninggal"
                android:textColor="@color/danger"
                android:textSize="14dp" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>