<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="18dp"
    android:layout_marginBottom="6dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingTop="9dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:id="@+id/tittleTOp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_kec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semibold"
            android:maxLines="1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textSize="20sp"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/odr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/regular"
            android:text="@string/odr"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tv_odr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/semibold"
            android:text="----"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/tv_odp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_odr"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/semibold"
            android:text="----"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/tv_pdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_odp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/semibold"
            android:text="----"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/odp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/odr"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/regular"
            android:text="@string/odp"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/pdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/odp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/regular"
            android:text="@string/pdp"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/positif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pdp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/regular"
            android:gravity="center_horizontal"
            android:text="@string/positif"
            android:textColor="@color/danger" />

        <TextView
            android:id="@+id/jumlah_positif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/positif"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/semibold"
            android:gravity="center_horizontal"
            android:text="----"
            android:textColor="@color/danger"
            android:textSize="22sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>